<resources>
    <string name="app_name">Shopping List</string>
    <string name="urgent_list">Urgent List</string>
    <string name="urgent">Urgent</string>
    <string name="items_bought">Items Bought</string>
    <string name="display_items">Display Items</string>
    <string name="add_items">Add Items</string>
    <string name="edit_items">Edit Items</string>
    <string name="shopping_item">Shopping Item</string>
    <string name="item">Item</string>
    <string name="quantity">Quantity</string>
    <string name="details">Details</string>
    <string name="detail">Detail</string>
    <string name="size">Size</string>
    <string name="bought">Bought</string>
    <string name="add_to_list">ADD TO LIST</string>
    <string name="update_item">UPDATE ITEM</string>
</resources>